added color blind explanation

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ display:  none;
         </div>
 
         <!-- Information Box -->
-        <!--<div class="info-box">
+        <div class="info-box">
             <h3>What is Tritanopia?</h3>
             <p>
                 Tritanopia is a rare form of color blindness affecting approximately 0.01% of the population. 
@@ -586,7 +586,7 @@ display:  none;
                 Blues may appear greenish, and yellows may appear pink or light purple. 
                 This condition significantly impacts the perception of web interfaces that rely on blue-yellow color schemes.
             </p>
-        </div>-->
+        </div>
 
         <!-- Navigation Example -->
         <nav class="navigation">
